# SurveyAnalysisTest

./: Readme.txt  pyproject.toml
scripts/: run_pipeline.py
survey_analysis/: __init__.py  analytics.py  ingestion.py  models.py  pipelines.py  snowflake_loader.py  storage.py  tableau.py
tests/: test_analytics.py  test_ingestion.py
web/: index.html
